--- a/logo.html
+++ b/logo.html
@@ -733,7 +733,7 @@
         if (r.inactive) tr.className = "inactive";
 
         const last = r.lastActiveMs ? new Date(r.lastActiveMs).toLocaleString() : "—";
-        const statusTxt = r.inactive ? "FAILED ROLE (no activity)" : "OK";
+        const statusTxt = r.inactive ? "Non-compliant — No steward actions logged" : "OK";
 
         tr.innerHTML = `
           <td class="mono">${escapeHtml(r.email)}</td>
