--- a/logo.html
+++ b/logo.html
@@ -318,16 +318,23 @@
 
       <!-- NEW: Steward Input (Last 7 Days) + roster inactive highlights -->
       <div class="auditBox" aria-label="Steward input audit">
-        <div class="auditTop">
-          <div class="auditTitle">Steward Input (Last 7 Days) — roster accountability</div>
-          <div class="row">
-            <label class="muted" style="display:flex;align-items:center;gap:8px;">
-              <input type="checkbox" id="showOnlyInactive">
-              Show only inactive
-            </label>
-            <button id="refreshAuditBtn">Refresh</button>
-          </div>
-        </div>
+  <div class="auditTop">
+    <div>
+      <div class="auditTitle">Steward Activity (Last 7 Days) — Accountability Overview</div>
+      <div class="muted" style="margin-top:4px;">
+        Note: Dave is exempt unless explicitly requested to review deadlock cases.
+      </div>
+    </div>
+
+    <div class="row">
+      <label class="muted" style="display:flex;align-items:center;gap:8px;">
+        <input type="checkbox" id="showOnlyInactive">
+        Show only inactive
+      </label>
+      <button id="refreshAuditBtn">Refresh</button>
+    </div>
+  </div>
+
 
         <div class="auditMeta" id="auditMeta">Loading…</div>
 
