--- a/logo.html
+++ b/logo.html
@@ -700,6 +700,14 @@
     let auditRowsCache = []; // {email, comments, reviews, ticketsTouched, lastActiveMs, inactive, statusLabel}
     function safeKey(email){ return (email || "").replaceAll("/", "_").replaceAll("\\", "_").trim(); }
 
+// GDPR-safe display: keep local-part, hide domain
+function displayStewardName(raw){
+  const s = String(raw || "").trim();
+  if (!s) return "Unknown";
+  const at = s.indexOf("@");
+  return at > 0 ? s.slice(0, at) : s;
+}
+    
     function roleLooksLikeSteward(adminDoc){
       const role = String(adminDoc?.role || "").toLowerCase();
       // include stewards + head stewards + owners (they’re still part of accountability)
@@ -743,7 +751,7 @@
         const statusTxt = r.inactive ? "Non-compliant — No steward actions logged" : "OK";
 
         tr.innerHTML = `
-          <td class="mono">${escapeHtml(r.email)}</td>
+          <td class="mono">${escapeHtml(displayStewardName(r.email))}</td>
           <td><b>${r.comments}</b></td>
           <td><b>${r.reviews}</b></td>
           <td><b>${r.ticketsTouched}</b></td>
