--- a/steward.html
+++ b/steward.html
@@ -120,6 +120,7 @@
     .delibTag { margin-top:8px; padding:8px 10px; border-radius:12px; font-size:12px; font-weight:900; line-height:1.2;
       border:1px solid #e5e7eb; background:#f9fafb; color:#111827; }
     .delibBad { border-color:#fca5a5; background:#fef2f2; color:#991b1b; }
+    .delibOk { border-color:#86efac; background:#ecfdf5; color:#065f46; }
     .delibTag small { display:block; margin-top:4px; font-weight:800; opacity:0.95; }
 
     .toast { position:fixed; right:16px; bottom:16px; background:#111827; color:#fff; padding:10px 12px; border-radius:12px;
@@ -599,18 +600,20 @@
     }
 
     function renderDelibTag(el, hasMyComment) {
-      if (!el) return;
+  if (!el) return;
 
-      if (hasMyComment) {
-        el.style.display = "none";
-        el.innerHTML = "";
-        return;
-      }
+  el.style.display = "block";
 
-      el.style.display = "block";
-      el.className = "delibTag delibBad";
-      el.innerHTML = `Requires deliberation<br><small>No steward comment from you yet</small>`;
-    }
+  if (hasMyComment) {
+    el.className = "delibTag delibOk";
+    el.innerHTML = `Deliberation ongoing<br><small>You have commented on this ticket</small>`;
+    return;
+  }
+
+  el.className = "delibTag delibBad";
+  el.innerHTML = `Requires deliberation<br><small>No steward comment from you yet</small>`;
+}
+
 
     // ---------- penalty preview (NEW) ----------
     function setPenaltyPreviewFromSelected() {
