--- a/steward.html
+++ b/steward.html
@@ -253,7 +253,7 @@
           </div>
 
           <div class="redBox">
-            You are NOT required to submit a CAUSE review immediately — please await player statements to be submitted before completing your CAUSE review.
+            CAUSE is still currently under construction - there is NO CAUSE input required on ANY ticket.
           </div>
 
           <div class="muted" id="statementsHint" style="margin-top:8px;">—</div>
