--- a/steward.html
+++ b/steward.html
@@ -106,7 +106,7 @@
 
     .needTag {
       display:inline-block; margin-top:8px; padding:4px 10px; border-radius:999px; font-size:12px; font-weight:800;
-      border:1px solid #fca5a5; background:#fef2f2; color:#991b1b;
+      border:1px solid #fcd34d; background:#fffbeb; color:#92400e;
     }
 
     /* statement status tag */
