--- a/steward.html
+++ b/steward.html
@@ -926,7 +926,7 @@ await loadTickets();
           <div class="stmtTag" id="stmt_${escapeHtml(t.id)}">Statements: Checking…<small>Accused + Reporter</small></div>
           <div class="delibTag" id="delib_${escapeHtml(t.id)}">Deliberation: Checking…<small>Your comment status</small></div>
 
-          ${needsMyInput ? `<div class="needTag">Needs your CAUSE input</div>` : ""}
+          ${needsMyInput ? `<div class="needTag">Cause not required</div>` : ""}
         `;
 
         div.onclick = async () => {
