--- a/openstatements.html
+++ b/openstatements.html
@@ -432,7 +432,7 @@
       }
 
       try{
-        const snap = await db.collection("tickets").limit(200).get();
+        const snap = await db.collection("tickets").limit(400).get();
         const rows = snap.docs.map(doc => {
           const d = doc.data() || {};
           return {
@@ -473,7 +473,7 @@
       }
 
       $("tickets").innerHTML = "";
-      $("hint").textContent = `Showing up to 200 tickets (Firestore limit).`;
+      $("hint").textContent = `Showing up to 400 tickets .`;
 
       // Sort: try newest-ish by id desc
       filtered.sort((a,b) => String(b.id).localeCompare(String(a.id)));
